Spelling and removed slide

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <section>
             <h2>Solution starter</h2>
             <ul>
-                <li>A new solution that positions EPAM at the leader of social analytics and asset recommendation</li>
+                <li>A new solution that positions EPAM as the leader of social analytics and asset recommendation</li>
             </ul>
         </section>
 
@@ -150,10 +150,6 @@
                 <li>Javascript Engineer/MongoDB Engineers</li>
                 <li>Analytics expert</li>
             </ul>
-        </section>
-        
-        <section>
-            <h1>Estimate</h1>
         </section>
 
         <section>
