--- a/index.html
+++ b/index.html
@@ -28,20 +28,35 @@
     <div class="slides">
         <!-- Opening slide -->
         <section>
-            <h1>Social Media Analytics</h1>
-            <h4>Node / Mongo and Data</h4>
+            <h1>ELF</h1>
+            <h4>Responsive Web Development Toolkit</h4>
         </section>
 
         <section>
             <h2>The Premise</h2>
             <ul>
-                <li>The Social Media App was an award winning POC</li>
-                <li>Development was abandoned, but hey, let's not let it die
-                    <ul>
-                        <li>Needed some architectural suppport</li>
-                        <li>Needed some analytical support</li>
-                    </ul>
+                <li>Broadly applied across 12+ RWD projects despite limited features</li>
+                <li>Several areas of improvement needed
+                    <ol>
+                        <li>Better architecture, modular composition</li>¬
+                        <li>Baked-in best practices</li>¬
+                        <li>More complete documentation</li>¬
+                        <li>Project-specific configuration</li>¬
+                        <li>Many added familiar conventions/patterns</li>¬
+                        <li>Improved speed &amp; stability of dev environment</li>¬
+                    </ol>
                 </li>
+            </ul>
+            <ul>¬
+            </ul>¬
+        </section>
+
+        <section>
+            <h2>Increased rigor</h2>
+            <ul>
+                <li>Higher quality... more time</li>
+                <li>More collaborative process... more time</li>
+                <li>Faster turnaround... less time!</li>
             </ul>
         </section>
 
@@ -50,34 +65,23 @@
         </section>
 
         <section>
-            <h2>Who's really doing what they say?</h2>
+            <h2>Internal Tooling</h2>
             <ul>
-                <li>Uses real-world consumption data to predict social media truthyness</li>
+                <li>Developer productivity in RWD is paramount</li>
+                <li>Reduce amount of re-work, re-invention between projects</li>
+                <li>Increase potential mobility between projects (a necessary evil)</li>
+                <li>Promote adoption of development standards and conventions across team</li>
+                <li>Provide a more stable and standardized dev environment</li>
             </ul>
         </section>
 
         <section>
-            <h2>Tell users what they'll like and WHY</h2>
+            <h2>Socialization</h2>
             <ul>
-                <li>Historical data analytics</li>
-                <li>Social network analyitcs</li>
-                <li>Noise to signal prediction (dark horse trends)</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Keep it simple</h2>
-            <ul>
-                <li>Development goal is an API Platform</li>
-                <li>Focus on data & analytics</li>
-                <li>Give clients the ability to manage business rules and dashboards</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Solution starter</h2>
-            <ul>
-                <li>A new solution that positions EPAM as the leader of social analytics and asset recommendation</li>
+                <li>Write clear, easily digestable documentation</li>
+                <li>Isolate from project-specific IP so that library code may be open-sourced</li>
+                <li>Democratize supported features by encouraging contributions</li>
+                <li>Establish EPAM's thought leadership in this area</li>
             </ul>
         </section>
 
@@ -88,32 +92,40 @@
         <section>
             <h2>Node.js</h2>
             <ul>
-                <li>Server-side Javascript</li>
-                <li>Allows for real-time client updates (push to page)</li>
-                <li>Threadable for computations</li>
-                <li>Modular framework allows for data-source and analytical plugin architecture</li>
+                <li>Based on JavaScript language, familiar to team</li>
+                <li>Simplify external dependencies and platform idiosyncrasies</li>
+                <li>Modular framework enables high potential for extension</li>
+                <li>Express+Swig web stack can export to static HTML</li>
             </ul>
         </section>
 
         <section>
-            <h2>Mongo DB</h2>
+            <h2>Yeoman/Grunt</h2>
             <ul>
-                <li>EPAM supported open technology</li>
-                <li>Document database reflects data points being analyzed</li>
+                <li>Sophisticated yet simple build system and project generator</li>
+                <li>Allows project-specific configuration as well as standard build process</li>
+                <li>Allows creation of generator templates</li>
+                <li>Uses robust plugin ecosystem</li>
             </ul>
         </section>
 
         <section>
-            <h2>Social data APIs</h2>
+            <h2>JavaScript Architecture</h2>
             <ul>
-                <li>Experts in popular and obscure social APIs</li>
+                <li>Bar has been raised considerably with client-side JS</li>
+                <li>Performance profiling and benchmarks across browsers &amp; devices</li>
+                <li>Provide standard modular architecture conventions</li>
+                <li>Stay project-agnostic while delivering useful hooks</li>
+                <li>Reduce external library dependencies where possible</li>
             </ul>
         </section>
 
         <section>
-            <h2>Analytical experts</h2>
+            <h2>Modular UX Pattern Authoring</h2>
             <ul>
-                <li>Learn best practices in developing meaning from data points</li>
+                <li>Acknowledge that a one-size-fits-all approach doesn't work</li>
+                <li>Provide customizable UX patterns that cover the 80% case by default</li>
+                <li>Curate a collection of common UX patterns that can be easily adapted to any project</li>
             </ul>
         </section>
 
@@ -122,19 +134,20 @@
         </section>
 
         <section>
-            <h2>Social analytics experts</h2>
+            <h2>Responsive XD experts</h2>
             <ul>
-                <li>Social data analytics</li>
-                <li>Contextual analytics</li>
-                <li>Social data acquisition</li>
+                <li>Modern toolkit assembled from the ground up specifically for RWD</li>
+                <li>Best practices for client-side implementation across browsers &amp; devices</li>
+                <li>Documentation and best practices consistent with the current device ecosystem</li>
             </ul>
         </section>
 
         <section>
-            <h2>Javascript stack experts</h2>
+            <h2>RWD Community</h2>
             <ul>
-                <li>Best practices for Node.js/MongoDB</li>
-                <li>Platform API documentation and best practices</li>
+                <li>Soliciting and responding to rigorous community feedback drives continuous improvement</li>
+                <li>Increases visibility and reputation of our RWD competency</li>
+                <li>Shows our commitment to excellence for all aspects of RWD</li>
             </ul>
         </section>
 
@@ -143,30 +156,39 @@
         </section>
 
         <section>
-            
             <h2>Staffing</h2>
-            
             <ul>
-                <li>Javascript Engineer/MongoDB Engineers</li>
-                <li>Analytics expert</li>
+                <li>Front-end developer</li>
+                <li>JavaScript engineer</li>
             </ul>
         </section>
 
         <section>
             <h2>Scope</h2>
             <ul>
-                <li>Limited to movies</li>
-                <li>Real-world data model (Ticket sales data source)</li>
-                <li>Two social data models (Twitter & Facebook)</li>
-                <li>Logged in and logged out social modes (friends' data adds weight)</li>
-                <li>Additional publication requirements</li>
+                <li>Port ELF from Ruby (Middleman) to Node.js (Yeoman+Express+Swig)</li>
+                <li>Separate the build framework from UI code</li>
+                <li>Build out pattern library (living style guide)</li>
+                <li>Encapsulate patterns as stand-alone modules</li>
+                <li>Document code, set up generated docs, maintain README/Confluence</li>
+                <li>Author Yeoman project template generators:
+                    <ul>
+                        <li>Layout</li>
+                        <li>Require.js</li>
+                        <li>JS engine</li>
+                        <li>Patterns</li>
+                    </ul>
+                </li>
+                <li>Web-based project builder</li>
             </ul>
         </section>
 
         <section>
             <h2>Prerequisites</h2>
             <ul>
-                <li>Access to a large EPAM hosted Node and Mongo stack</li>
+                <li>Access to an adequate cross-section of browsers and devices for testing</li>
+                <li>Access to OS X, Linux, and Windows platforms as dev environments</li>
+                <li>Access to EPAM hosted web server and CI instance</li>
             </ul>
         </section>
 
@@ -175,19 +197,18 @@
             <ul>
                 <li>Assumptions</li>
                 <ul>
-                    <li>Development will be full time, additional time will be for consultation with analytics dept.</li>
+                    <li>Development will be full time, additional time will be for consultation with UX dept.</li>
                     <li>Development environment is available</li>
+                    <li>1 FT Front-end Developer</li>
                     <li>1 FT Javascript Engineer</li>
-                    <li>1 FT MongoDB Engineer</li>
-                    <li>Analytics consultation available</li>
-                    <li>Scope completed in 2 months</li>
+                    <li>Scope completed in 4 weeks</li>
                 </ul>
                 <li>Hours</li>
                 <ul>
-                    <li>JS Engineer:  320 hours</li>
-                    <li>MongoDB Engineer: 320 hours</li>
-                    <li>Analytics Consultations: 80</li>
-                    <li>TOTAL HOURS: 720 Hours</li>
+                    <li>JS Engineer: 120 hours</li>
+                    <li>MongoDB Engineer: 160 hours</li>
+                    <li>UX Consultations: 40</li>
+                    <li>TOTAL HOURS: 320 Hours</li>
                 </ul>
             </ul>
         </section>
